welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: not found: value i
    if (nums(i) > max1){
             ^max2Value:6: error: not found: value i
      max1 = nums(i);
                  ^max2Value:7: error: not found: value i
    } else if (nums(i) > max2 ){
                    ^max2Value:8: error: not found: value i
      max2 = nums(i);
                  ^