welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var max1:Int = Integer.MIN_VALUE;
  var max2:Int = Integer.MIN_VALUE;
  for ( 0 <- 1 to (nums.length - 1) ){
    if (nums(i) > max1){
      max1 = nums(i);
    } else if (nums(i) > max2 ){
      max2 = nums(i);
    }
  }
  return max2;
}